--- a/grid_area.css
+++ b/grid_area.css
@@ -4,3 +4,27 @@
     border-radius: 10px;
     border:2px solid rgb(70, 228, 228);
 }
+/* , nav ,.main ,.asidebar,.advertise  ,.footer */
+
+.header{
+grid-area: header;
+}
+.nav{
+    grid-area: nav;
+}
+
+.main{
+    grid-area: main;
+}
+
+.asidebar{
+    grid-area: asidebar;
+}
+
+.advertise{
+    grid-area: advertise;
+}
+
+.footer{
+    grid-area: footer;
+}
